# img-org

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  LICENSE  PERCEPTUAL_HASHING_SUMMARY.md  PHASE2_SUMMARY.md  QUICKSTART.md  README.md  cross-platform-test.json  demo.py  docs-scan-001.json  full-scan-001.json  pyproject.toml  test-docs-scan.json  test-images-scan.json
.github/: copilot-instructions.md
.github/prompts/: add-safety-checks.prompt.md  optimize-api-calls.prompt.md  review-deletion-candidates.prompt.md
.github/skills/google-drive-api-integration/: SKILL.md
.github/skills/image-duplicate-detection/: SKILL.md
.github/skills/safe-image-deletion/: SKILL.md
docs/: CROSS_PLATFORM_SCANNING.md  DOCUMENT_SCANNING.md  GOOGLE_DRIVE_SETUP.md  IMPLEMENTATION_PLAN.md  NEAR_DUPLICATE_QUICK_REF.md  PHASE3_SUMMARY.md  SETUP_VERIFICATION.md
src/image_organizer/: __init__.py  cli.py
src/image_organizer/core/: __init__.py  cross_platform.py  detector.py  scanner.py  staging.py
src/image_organizer/ui/: __init__.py  review.py
src/image_organizer/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_google_drive.py  test_google_drive_perceptual.py  test_review.py  test_scanner.py
