[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-organizer"
version = "0.1.0"
description = "Intelligent image duplicate detection and storage optimization tool with safety-first design"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Image Organizer Contributors"}
]
keywords = ["image", "duplicate", "detection", "photo", "organizer", "deduplication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Filesystems",
]

dependencies = [
    "imagededup>=0.3.2",      # Duplicate detection engine (includes Pillow, imagehash, numpy)
    "tqdm>=4.66.0",           # Progress bars
    "Send2Trash>=1.8.0",      # Safe deletion to recycle bin
    "click>=8.1.0",           # CLI framework
    "rich>=13.7.0",           # Rich terminal output
    "tabulate>=0.9.0",        # Table formatting for reports
]

[project.optional-dependencies]
google-drive = [
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
image-organizer = "image_organizer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/image-organizer"
Repository = "https://github.com/yourusername/image-organizer"
Issues = "https://github.com/yourusername/image-organizer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
image_organizer = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "imagededup.*",
    "Send2Trash.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/image_organizer",
    "--cov-report=term-missing",
    "--cov-report=html",
]
